--- a/index.html
+++ b/index.html
@@ -3,12 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>my job
-
-    </title>
+    <title>my job</title>
 </head>
 <body>
   hello everyone
-  
 </body>
 </html>
